# haskell-exos

./: README.md  haskell-exos.cabal
app/: Main.hs
src/: Exos1.hs
src/Week1/: Exos.hs
src/Week2/: LogAnalysis.hs
src/Week3/: Golf.hs
src/Week4/: Exos.hs
src/Week5/: Calc.hs  Parser.hs  StackVM.hs
src/Week6/: Fibonacci.hs
