name:                haskell-exos
version:             0.1.0.0
synopsis:            Exercices d'apprentissage d'Haskell
description:         Please see README.md
homepage:            http://github.com/gneuvill/haskell-exos
license:             BSD3
license-file:        LICENSE
author:              Grégoire Neuville
maintainer:          gregoire.neuville@gmail.univ-rennes1.fr
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Week1.Exos
                     , Week2.LogAnalysis
                     , Week3.Golf
  build-depends:       base >= 4.7 && < 5
                     , safe
  ghc-options:         -Wall
  default-language:    Haskell2010

executable haskell-exos-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-exos
  default-language:    Haskell2010

test-suite haskell-exos-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-exos
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gneuvill/haskell-exos
